--- a/index.html
+++ b/index.html
@@ -17,6 +17,19 @@
           <li><a href="">Login</a></li>
         </ul>
       </nav>
+
+      <div class="banner">
+        <div class="banner-content">
+          <h1 class="banner-title">Brand New Group of Architects</h1>
+          <p class="banner-desc">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+          <button class="btn-primary">Explore More</button>
+        </div>
+        <img class="banner-img" src="images/banner.png" alt="Banner" />
+      </div>
     </header>
 
     <main></main>
